修改一下activity基类

--- a/app/src/main/res/layout/activity_expand_list_view.xml
+++ b/app/src/main/res/layout/activity_expand_list_view.xml
@@ -22,7 +22,9 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="10dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true">
 
                 <TextView
                     android:id="@+id/textView"
@@ -64,6 +66,7 @@
                 android:id="@+id/expand_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
+
         </LinearLayout>
 
     </ScrollView>
